# 2025-reg-hack-week-airsenal

./: .gitignore  README.md  player_minutes_exploration.ipynb  pyproject.toml
dashboard/: DASHBOARD_README.md  dashboard.py  test_dashboard.py
datasets/: baseline_points_minutes_prediction.csv
llm_experiments/: chat_fpl_predictor.py  llm_predictions_arsenal_2324.csv  predictions_ARS_2425_1.csv  predictions_ARS_2425_10_2024-11-02T12:30:00Z.csv  predictions_ARS_2425_11_2024-11-10T16:30:00Z.csv  predictions_ARS_2425_12_2024-11-23T15:00:00Z.csv  predictions_ARS_2425_13_2024-11-30T17:30:00Z.csv  predictions_ARS_2425_14_2024-12-04T20:15:00Z.csv  predictions_ARS_2425_15_2024-12-08T14:00:00Z.csv  predictions_ARS_2425_16_2024-12-14T15:00:00Z.csv  predictions_ARS_2425_17_2024-12-21T17:30:00Z.csv  predictions_ARS_2425_19_2025-01-01T17:30:00Z.csv  predictions_ARS_2425_1_2024-08-17T14:00:00Z.csv  predictions_ARS_2425_2.csv  predictions_ARS_2425_20_2025-01-04T17:30:00Z.csv  predictions_ARS_2425_21_2025-01-15T20:00:00Z.csv  predictions_ARS_2425_22_2025-01-18T17:30:00Z.csv  predictions_ARS_2425_23_2025-01-25T15:00:00Z.csv  predictions_ARS_2425_24_2025-02-02T16:30:00Z.csv  predictions_ARS_2425_25_2025-02-15T12:30:00Z.csv  predictions_ARS_2425_26_2025-02-22T15:00:00Z.csv  predictions_ARS_2425_27_2025-02-26T19:30:00Z.csv  predictions_ARS_2425_29_2025-03-16T13:30:00Z.csv  predictions_ARS_2425_2_2024-08-24T16:30:00Z.csv  predictions_ARS_2425_30_2025-04-01T18:45:00Z.csv  predictions_ARS_2425_31_2025-04-05T11:30:00Z.csv  predictions_ARS_2425_32_2025-04-12T16:30:00Z.csv  (+13 more)
results/: run.sh  (+17 more)
(+130 files in other folders)
